// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`FaqQuestionItem stories snapshot > Default story renders and matches snapshot 1`] = `
<button
  class="flex w-full cursor-pointer items-center gap-3 rounded-md border border-border bg-background px-3 py-3 text-left text-sm text-foreground transition-colors hover:border-muted-foreground/40 focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-foreground"
  type="button"
>
  <svg
    aria-hidden="true"
    class="size-4 shrink-0 text-foreground"
    fill="currentColor"
    viewBox="0 0 24 24"
  >
    <path
      d="M12 2l2.5 7.5L22 12l-7.5 2.5L12 22l-2.5-7.5L2 12l7.5-2.5L12 2z"
    />
  </svg>
  <span
    class="min-w-0 flex-1"
  >
    What sizes does this come in?
  </span>
  <svg
    aria-hidden="true"
    class="lucide lucide-chevron-right size-4 shrink-0 text-muted-foreground"
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="m9 18 6-6-6-6"
    />
  </svg>
</button>
`;

exports[`FaqQuestionItem stories snapshot > SecondQuestion story renders and matches snapshot 1`] = `
<button
  class="flex w-full cursor-pointer items-center gap-3 rounded-md border border-border bg-background px-3 py-3 text-left text-sm text-foreground transition-colors hover:border-muted-foreground/40 focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-foreground"
  type="button"
>
  <svg
    aria-hidden="true"
    class="size-4 shrink-0 text-foreground"
    fill="currentColor"
    viewBox="0 0 24 24"
  >
    <path
      d="M12 2l2.5 7.5L22 12l-7.5 2.5L12 22l-2.5-7.5L2 12l7.5-2.5L12 2z"
    />
  </svg>
  <span
    class="min-w-0 flex-1"
  >
    Which color would work best for a minimalist space?
  </span>
  <svg
    aria-hidden="true"
    class="lucide lucide-chevron-right size-4 shrink-0 text-muted-foreground"
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="m9 18 6-6-6-6"
    />
  </svg>
</button>
`;

exports[`FaqQuestionItem stories snapshot > ThirdQuestion story renders and matches snapshot 1`] = `
<button
  class="flex w-full cursor-pointer items-center gap-3 rounded-md border border-border bg-background px-3 py-3 text-left text-sm text-foreground transition-colors hover:border-muted-foreground/40 focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-foreground"
  type="button"
>
  <svg
    aria-hidden="true"
    class="size-4 shrink-0 text-foreground"
    fill="currentColor"
    viewBox="0 0 24 24"
  >
    <path
      d="M12 2l2.5 7.5L22 12l-7.5 2.5L12 22l-2.5-7.5L2 12l7.5-2.5L12 2z"
    />
  </svg>
  <span
    class="min-w-0 flex-1"
  >
    Will this work in a minimalist living room?
  </span>
  <svg
    aria-hidden="true"
    class="lucide lucide-chevron-right size-4 shrink-0 text-muted-foreground"
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="m9 18 6-6-6-6"
    />
  </svg>
</button>
`;
